WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228795
[GPUP] RemoteAudioSessionProxyManager should use the shared audio session
https://bugs.webkit.org/show_bug.cgi?id=228795
Summary
[GPUP] RemoteAudioSessionProxyManager should use the shared audio session
Eric Carlson
Reported
2021-08-04 13:27:06 PDT
RemoteAudioSessionProxyManager should use the shared audio session instead of creating a private audio session.
Attachments
Patch
(4.76 KB, patch)
2021-08-04 14:06 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.23 KB, patch)
2021-08-04 17:11 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.55 KB, patch)
2021-08-05 08:47 PDT
,
Eric Carlson
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(5.56 KB, patch)
2021-08-05 09:10 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-04 13:27:28 PDT
<
rdar://problem/81530450
>
Eric Carlson
Comment 2
2021-08-04 14:06:49 PDT
Created
attachment 434931
[details]
Patch
Eric Carlson
Comment 3
2021-08-04 17:11:34 PDT
Created
attachment 434952
[details]
Patch for landing
Eric Carlson
Comment 4
2021-08-05 08:47:07 PDT
Created
attachment 434990
[details]
Patch for landing
Eric Carlson
Comment 5
2021-08-05 09:10:14 PDT
Created
attachment 434992
[details]
Patch for landing
EWS
Comment 6
2021-08-05 10:06:05 PDT
Committed
r280698
(
240295@main
): <
https://commits.webkit.org/240295@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434992
[details]
.
youenn fablet
Comment 7
2021-08-06 05:45:53 PDT
As per
https://ews-build.s3-us-west-2.amazonaws.com/macOS-AppleSilicon-Big-Sur-Debug-WK2-Tests-EWS/r435060-9411/results.html
, it seems we still hit an assert: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x00000001389eedf4 WTFCrash + 20 1 com.apple.WebCore 0x0000000117cdbcb0 WTFCrashWithInfo(int, char const*, char const*, int) + 32 2 com.apple.WebCore 0x000000011bc6f04c WebCore::BaseAudioSharedUnit::startUnit() + 176 3 com.apple.WebCore 0x000000011bc6ed84 WebCore::BaseAudioSharedUnit::startProducingData() + 336 4 com.apple.WebCore 0x000000011bca2788 WebCore::CoreAudioCaptureSource::startProducingData() + 44 5 com.apple.WebCore 0x000000011bc1c418 WebCore::RealtimeMediaSource::start() + 220 6 com.apple.WebKit 0x0000000106085028 WebKit::UserMediaCaptureManagerProxy::SourceProxy::start() + 48
Peng Liu
Comment 8
2021-08-06 10:44:08 PDT
Looks like it is tracked by
bug 228847
.
Truitt Savell
Comment 9
2021-08-11 12:15:07 PDT
It looks like the changes in
https://trac.webkit.org/changeset/280698/webkit
broke TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturing with ASSERTION FAILED: !isInRoutingArbitrationForToken(token) tracking in
https://bugs.webkit.org/show_bug.cgi?id=229010
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug